plugins {
    id 'java'
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${bootDependencyManagement}"
    id 'eclipse'
    id 'idea'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
    maven { url "https://packages.confluent.io/maven/" }
}

dependencies {
    // Spring boot
    implementation("org.springframework.boot:spring-boot-starter")
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
    implementation("org.apache.kafka:kafka-clients:4.2.0")
    implementation("io.confluent:kafka-json-schema-serializer:8.1.0")

    // Test dependencies
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.springframework.boot:spring-boot-starter-webmvc-test")
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

bootJar {
    archiveClassifier = 'exec'
}

bootRun {
    jvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

